# hexchat

plugins/sysinfo/: Makefile.am  sysinfo.c  sysinfo.h  sysinfo.vcxproj  sysinfo.vcxproj.filters
plugins/sysinfo/unix/: match.c  match.h  parse.c  pci.c  sysinfo-backend-unix.c
plugins/sysinfo/win32/: sysinfo-backend-win32.c
